--- a/college_admission/student/templates/landingPage.html
+++ b/college_admission/student/templates/landingPage.html
@@ -466,7 +466,8 @@
                                     </div>
                                 </div>
                             </div>
-
+                        </div>
+                    </div>
                             <div class="container">
                       <div class="width-33">
                       <div class="certificate">
