--- a/college_admission/student/templates/landingPage.html
+++ b/college_admission/student/templates/landingPage.html
@@ -269,11 +269,11 @@
             margin-bottom: 30px;
         }
 
-        .content-principal{
+        .content-principal {
             margin-top: 100px;
         }
 
-        .certificate{
+        .certificate {
             margin-left: 10px;
             margin-right: 10px;
             background: #fff;
@@ -282,22 +282,57 @@
             margin-bottom: 30px;
         }
 
-        .certificate-list{
+        .certificate-list {
             width: 100%;
             float: left;
             margin-bottom: 15px;
         }
 
+        .gallery-head-style {
+            font-size: 40px;
+            color: #4b4848;
+            margin-bottom: 5px;
+            background: white;
+            padding: 2px 0px;
+        }
+
+        .width-25 {
+            width: 30%;
+            float: left;
+        }
+
+        .height-400{
+            height: 300px;
+        }
+
+        .margin-all-1{
+            margin: 0.4rem;
+        }
+
+        .gallery-img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            border: black 5px solid;
+        }
+
+        .recruiter-head-style{
+            font-size: 28px;
+            color: #4b4848;
+            margin-top: 5px;
+        }
+
+        .recruiter-marquee{
+            height: 100px;
+            width: 50%;
+        }
+
+        .recruiter-marquee img{
+            height: 80px;
+            width: 140px;
+        }
+
         
-
-
-
-
-
-
-
-
-
 
 
     </style>
@@ -430,7 +465,8 @@
                                             src="https://cdn-icons-png.flaticon.com/128/6209/6209821.png"><a href="#">
                                             Online Result</a></li>
                                     <li><img class="file-icon"
-                                            src="https://cdn-icons-png.flaticon.com/128/6682/6682880.png"><a href="#"> Exam
+                                            src="https://cdn-icons-png.flaticon.com/128/6682/6682880.png"><a href="#">
+                                            Exam
                                             Time Table</a></li>
                                     <li><img class="file-icon"
                                             src="https://cdn-icons-png.flaticon.com/128/17148/17148344.png"><a href="#">
@@ -468,19 +504,65 @@
                             </div>
                         </div>
                     </div>
-                            <div class="container">
-                      <div class="width-33">
-                      <div class="certificate">
-                        <div class="heading-sect">
-                          <h3 class="head-title">My certificate</h3>
+                    <div class="container">
+                        <div class="width-33">
+                            <div class="certificate">
+                                <div class="heading-sect">
+                                    <h3 class="head-title">My certificate</h3>
+                                </div>
+                                <div class="certificate-list"></div>
+                                <img src="https://static.vecteezy.com/system/resources/previews/000/190/863/original/gold-details-certificate-of-excellence-template-vector.jpg"
+                                    class="width-100">
+                            </div>
                         </div>
-                         <div class="certificate-list"></div>
-                        <img src="https://static.vecteezy.com/system/resources/previews/000/190/863/original/gold-details-certificate-of-excellence-template-vector.jpg" class="width-100">
-                        </div>
                     </div>
+                </div>
+
+                <div class="width-100 margin-top-50">
+                    <div class="container">
+                        <h1 class="gallery-head-style">Gallery</h1>
+                        <div class="width-25 height-400 margin-all-1"><img
+                                src=" https://wtcpu.org.in/gallery/1677329718.jpeg"
+                                class="gallery-img "></div>
+                        <div class="width-25 height-400 margin-all-1"><img
+                                src="https://upload.wikimedia.org/wikipedia/commons/4/48/Graduation_ceremony_with_Azim_Premji.JPG"
+                                class="gallery-img "></div>
+                        <div class="width-25 height-400 margin-all-1"><img
+                                src="http://sites.tufts.edu/hhslnews/files/2014/05/graduates.jpg "
+                                class="gallery-img "></div>
+                        <div class="width-25 height-400 margin-all-1"><img
+                                src=" https://www.cedarcollege.sa.edu.au/wp-content/uploads/2017/03/Sports-day1.jpg"
+                                class="gallery-img "></div>
+                        <div class="width-25 height-400 margin-all-1"><img
+                                src="https://resize.indiatvnews.com/en/resize/newbucket/1200_-/2016/05/college-1462989841.jpg"
+                                class="gallery-img "></div>
+                        <div class="width-25 height-400 margin-all-1"><img
+                                src=" https://www.4to40.com/wp-content/uploads/2016/01/Girls-wearing-traditional-Panjabi-dresses-perform-gidda-during-the-Lohri-celebrations-at-the-Ramgarhia-College-for-Girls-in-Ludhiana-500x332.jpg"
+                                class="gallery-img "></div>
+                        <div class="width-25 height-400 margin-all-1"><img
+                                src=" https://assets.telegraphindia.com/telegraph/eff940b9-68fe-4b77-bb6e-e03d462ff668.jpg"
+                                class="gallery-img "></div>
+                        <div class="width-25 height-400 margin-all-1"><img
+                                src="https://www.holidify.com/images/cmsuploads/articles/411.jpg"
+                                class="gallery-img "></div>
+                                <div class="width-25 height-400 margin-all-1"><img
+                                src="https://www.chase.com/content/services/rendition/image.large.jpg/content/dam/unified-assets/photography/articles/student/student_taking-community-college-classes-while-in-university.jpg"
+                                class="gallery-img "></div>
                     </div>
+                </div>
+                <div class="width-100 margin-top-50">
+                    <div class="container">
+                        <h1 class="recruiter-head-style">Top Recruiters</h1>
+                        <marquee class="recruiter-marquee">
+                        <img src="https://tse3.mm.bing.net/th?id=OIP.AzvaQ2wUVGqSpzFr1tgl7wHaDG&pid=Api&P=0&h=180">
+                        <img src=" https://tse3.mm.bing.net/th?id=OIP.79QrixzWGmiR3S8-8qp08gHaEK&pid=Api&P=0&h=180">
+                        <img src=" https://tse4.mm.bing.net/th?id=OIP.MPHAVL52hadir7pe0HszoAHaEK&pid=Api&P=0&h=180">
+                        <img src=" https://tse4.mm.bing.net/th?id=OIP.zwMOkAZ-STyGQ3nD3ctjzgHaEK&pid=Api&P=0&h=180">
+                        <img src=" https://tse3.mm.bing.net/th?id=OIP.tfH12PtNMzS6ccpgyW4KaQHaCg&pid=Api&P=0&h=180">
+                        <img src="https://tse2.mm.bing.net/th?id=OIP.bgzOO_V_Y79YKSEobt0dxwHaCU&pid=Api&P=0&h=180 ">
+                        </marquee>
                     </div>
-                
+                </div>
 
 </body>
 
