--- a/college_admission/student/templates/landingPage.html
+++ b/college_admission/student/templates/landingPage.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>collage admission</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         * {
             padding: 0px;
@@ -317,19 +318,76 @@
         }
 
         .recruiter-head-style{
-            font-size: 28px;
+            font-size: 40px;
             color: #4b4848;
             margin-top: 5px;
         }
 
         .recruiter-marquee{
             height: 100px;
-            width: 50%;
+            
         }
 
         .recruiter-marquee img{
             height: 80px;
-            width: 140px;
+            width: 14opx;
+        }
+
+        .footer{
+            background: #405670;
+            padding: 50px 0px;
+        }
+
+        .quicklink-heading{
+            font-size: 18px;
+            font-weight: bold;
+            color: black;
+            margin-bottom: 10px;
+            background-color: #fff;
+            padding: 6px;
+            width:  120px;
+             }
+
+        .quicklink-menu{
+            list-style: none;
+            padding-left: 10px;
+        }
+
+        .quicklink-menu li a{
+            color: #fff;
+            line-height: 2.5;
+            font-size: 15px;
+            text-decoration: none;     
+        }
+
+        .get-in-touch{
+            list-style: none;
+            padding-left: 10px;
+        }
+
+        .get-in-touch li{
+            color: #fff;
+            line-height: 2.5;
+            font-size: 15px;
+        }
+
+        .get-in-touch li i{
+            color: black;
+            font-size: 20px;
+        }
+
+        .footer-e-mail{
+            font-size: 15px;
+            font-weight: bold;
+            color: black;
+            text-decoration: none;
+        }
+
+        .footer-website{
+            font-size: 15px;
+            font-weight: bold;
+            color: black;
+            text-decoration: none;
         }
 
         
@@ -552,7 +610,7 @@
                 </div>
                 <div class="width-100 margin-top-50">
                     <div class="container">
-                        <h1 class="recruiter-head-style">Top Recruiters</h1>
+                        <h1 class="recruiter-head-style">Top Recruiters Company</h1>
                         <marquee class="recruiter-marquee">
                         <img src="https://tse3.mm.bing.net/th?id=OIP.AzvaQ2wUVGqSpzFr1tgl7wHaDG&pid=Api&P=0&h=180">
                         <img src=" https://tse3.mm.bing.net/th?id=OIP.79QrixzWGmiR3S8-8qp08gHaEK&pid=Api&P=0&h=180">
@@ -561,6 +619,50 @@
                         <img src=" https://tse3.mm.bing.net/th?id=OIP.tfH12PtNMzS6ccpgyW4KaQHaCg&pid=Api&P=0&h=180">
                         <img src="https://tse2.mm.bing.net/th?id=OIP.bgzOO_V_Y79YKSEobt0dxwHaCU&pid=Api&P=0&h=180 ">
                         </marquee>
+                    </div>
+                </div>
+                <div class="width-100 margin-top-50 footer">
+                    <div class="container">
+                        <div class="width-25">
+                            <h2 class="quicklink-heading">Quick Links</h2>
+                            <ul class="quicklink-menu">
+                          <li><a href="#">Home</a></li>
+                          <li><a href="#">About Us</a></li>
+                          <li><a href="#">Gallery</a></li>
+                          <li><a href="#">Contact Us</a></li>
+
+                           </ul>
+                        </div>
+                        <div class="width-25">
+                            <h2 class="quicklink-heading">Student Section</h2>
+                            <ul class="quicklink-menu">
+                          <li><a href="#">Result</a></li>
+                          <li><a href="#">Pay Fee</a></li>
+                          <li><a href="#">Training</a></li>
+                          <li><a href="#">Placements</a></li>
+
+                           </ul>
+                        </div>
+                        <div class="width-25">
+                            <h2 class="quicklink-heading">Informatio Link</h2>
+                            <ul class="quicklink-menu">
+                          <li><a href="#">News</a></li>
+                          <li><a href="#">R&D Policy </a></li>
+                          <li><a href="#">Anti-Ragging</a></li>
+                          <li><a href="#">Admission</a></li>
+
+                           </ul>
+                        </div>
+                        <div class="width-25">
+                            <h2 class="quicklink-heading">GET IN TOUCH</h2>
+                            <ul class="get-in-touch">
+                          <li><i class="fa fa-envelope-o"></i> E-MAIL:<a href="#"class ="footer-e-mail"> info@dezven.com</a></li>
+                          <li><i class="fa fa-whatsapp"></i> WHATS-APP: +91-123 456 789</li>
+                          <li><i class="fa fa-fax"></i> CONTACT-NO: +91 -(123)-4567890</li>
+                          <li><i class="fa fa-globe"></i> WEBSITE:<a href="#" class="footer-website"> https://www.dezven.com</a></li>
+                        
+                        </ul>
+                        </div>
                     </div>
                 </div>
 
