--- a/college_admission/student/templates/registerStudent.html
+++ b/college_admission/student/templates/registerStudent.html
@@ -79,6 +79,12 @@
 </div>
 
 <div class="panels-container"></div>
+<div class="panel left-panel">
+    <div class="content">
+        <h3>New Here?</h3>
+        <p></p>
+    </div>
+</div>
 
 
 </div>
