--- a/college_admission/student/templates/registerStudent.html
+++ b/college_admission/student/templates/registerStudent.html
@@ -1,93 +1,114 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Registration</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/fontawesome.min.js" integrity="sha512-j12pXc2gXZL/JZw5Mhi6LC7lkiXL0e2h+9ZWpqhniz0DkDrO01VNlBrG3LkPBn6DgG2b8CDjzJT+lxfocsS1Vw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/fontawesome.min.js"
+        integrity="sha512-j12pXc2gXZL/JZw5Mhi6LC7lkiXL0e2h+9ZWpqhniz0DkDrO01VNlBrG3LkPBn6DgG2b8CDjzJT+lxfocsS1Vw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="{% static 'student/registerStyle.css' %}">
 </head>
+
 <body>
-    
-<div class="container">
-<div class="forms-container">
-    <div class="signin-signup">
-        <form action="" class="sign-in-form">
-            <h2 class="title">Sign In</h2>
-            <div class="input-field">
-                <i class="fas fa-user"></i>
-                <input type="text" placeholder="Username">
-            </div>
-            <div class="input-field">
-                <i class="fas fa-lock"></i>
-                <input type="password" placeholder="Password">
-            </div>
-            <input type="submit" value="login" class="btn solid">
-            <p class="social-text">Or Sign in with Social Platform</p>
-            <div class="social-media">
-                <a href="" class="social-icon">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" class="social-icon">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="" class="social-icon">
-                    <i class="fab fa-google"></i>
-                </a>
-                <a href="" class="social-icon">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-            </div>
+
+    <div class="container">
+        <div class="forms-container">
+            <div class="signin-signup">
+                <form action="" class="sign-in-form">
+                    <h2 class="title">Sign In</h2>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="text" placeholder="Username">
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Password">
+                    </div>
+                    <input type="submit" value="login" class="btn solid">
+                    <p class="social-text">Or Sign in with Social Platform</p>
+                    <div class="social-media">
+                        <a href="" class="social-icon">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
                 </form>
-                <div class="container">
-                    <div class="forms-container">
-                        <div class="signin-signup">
-                            <form action="" class="sign-up-form">
-                                <h2 class="title">Sign Up</h2>
-                                <div class="input-field">
-                                    <i class="fas fa-user"></i>
-                                    <input type="text" placeholder="Username">
-                                </div>
-                                <div class="input-field">
-                                    <i class="fas fa-envelope"></i>
-                                    <input type="email" placeholder="Email">
-                                </div>
-                                <div class="input-field">
-                                    <i class="fas fa-lock"></i>
-                                    <input type="password" placeholder="Password">
-                                </div>
-                                <input type="submit" value="Sign up" class="btn solid">
-                                <p class="social-text">Or Sign up with Social Platform</p>
-                                <div class="social-media">
-                                    <a href="" class="social-icon">
-                                        <i class="fab fa-facebook-f"></i>
-                                    </a>
-                                    <a href="" class="social-icon">
-                                        <i class="fab fa-twitter"></i>
-                                    </a>
-                                    <a href="" class="social-icon">
-                                        <i class="fab fa-google"></i>
-                                    </a>
-                                    <a href="" class="social-icon">
-                                        <i class="fab fa-linkedin-in"></i>
-                                    </a>
-                                </div>
-                                    </form>
+
+                <form action="" class="sign-up-form">
+                    <h2 class="title">Sign Up</h2>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="text" placeholder="Username">
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-envelope"></i>
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Password">
+                    </div>
+                    <input type="submit" value="Sign up" class="btn solid">
+                    <p class="social-text">Or Sign up with Social Platform</p>
+                    <div class="social-media">
+                        <a href="" class="social-icon">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                </form>
+
+
+            </div>
+            <div class="panels-container">
+                <div class="pannel left-pannel">
+                    <div class="content">
+                        <h3>New Here?</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <button class="btn transparent" id="sign-up-btn">Sign Up </button>
+                    </div>
+                </div>
+                <div class="pannel right-pannel">
+                    <div class="content">
+
+                        <h3>One of us?</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <button class="btn transparent" id="sign-up-btn">Sign In </button>
+                    </div>
+                </div>
+            </div>
+
+             <img src="https://img.freepik.com/premium-vector/happy-teachers-day-male-children-students-holding-gifts-bouquet-flowers-world-teachers_1026586-147.jpg?w=740">
+
+
+
+       
+        
+        <img src="https://img.freepik.com/premium-vector/video-call-study-online-learning_1313182-3892.jpg?ga=GA1.1.1758042254.1738941354&semt=ais_hybrid"> 
     </div>
-</div>
-
-<div class="panels-container"></div>
-<div class="panel left-panel">
-    <div class="content">
-        <h3>New Here?</h3>
-        <p></p>
-    </div>
-</div>
-
-
-</div>
     <script src="{% static 'student/registerScript.js' %}"></script>
 </body>
+
 </html>
