--- a/college_admission/student/templates/landingPage.html
+++ b/college_admission/student/templates/landingPage.html
@@ -488,9 +488,9 @@
                 <ul class="main-menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
-                    <li><a href="#">Academics</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Notice Board</a></li>
+                    <li><a href="course">Course</a></li>
+                    <li><a href="form">Form</a></li>
+                    <li><a href="dashboard">Dashboard</a></li>
                     <li><a href="#">Contact Us</a></li>
     
                     <li><a href="register">Register</a></li>
@@ -671,7 +671,7 @@
                                 src=" https://www.4to40.com/wp-content/uploads/2016/01/Girls-wearing-traditional-Panjabi-dresses-perform-gidda-during-the-Lohri-celebrations-at-the-Ramgarhia-College-for-Girls-in-Ludhiana-500x332.jpg"
                                 class="gallery-img "></div>
                         <div class="width-30 height-400 margin-all-1"><img
-                                src=" https://assets.telegraphindia.com/telegraph/eff940b9-68fe-4b77-bb6e-e03d462ff668.jpg"
+                                src="https://assets.telegraphindia.com/telegraph/eff940b9-68fe-4b77-bb6e-e03d462ff668.jpg"
                                 class="gallery-img "></div>
                         <div class="width-30 height-400 margin-all-1"><img
                                 src="https://www.holidify.com/images/cmsuploads/articles/411.jpg"
