--- a/college_admission/student/templates/registerStudent.html
+++ b/college_admission/student/templates/registerStudent.html
@@ -20,15 +20,15 @@
     <div class="container">
         <div class="forms-container">
             <div class="signin-signup">
-                <form action="" class="sign-in-form">
+                <form action="" class="sign-in-form" id="login-form">
                     <h2 class="title">Sign In</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username">
+                        <input type="text" id="login_username"placeholder="Username">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" id="login_password" placeholder="Password">
                     </div>
                     <input type="submit" value="login" class="btn solid">
                     <p class="social-text">Or Sign in with Social Platform</p>
@@ -48,19 +48,19 @@
                     </div>
                 </form>
 
-                <form action="" class="sign-up-form">
+                <form action="" class="sign-up-form" id="register-form">
                     <h2 class="title">Sign Up</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username">
+                        <input type="text" id="register_username" name="register_username" placeholder="Username">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
-                        <input type="email" placeholder="Email">
+                        <input type="email"  id="register_email" name="register_email" placeholder="Email">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password"  id="register_password" name="register_password" placeholder="Password">
                     </div>
                     <input type="submit" value="Sign up" class="btn solid">
                     <p class="social-text">Or Sign up with Social Platform</p>
@@ -83,32 +83,41 @@
 
             </div>
             <div class="panels-container">
-                <div class="pannel left-pannel">
-                    <div class="content">
-                        <h3>New Here?</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                        <button class="btn transparent" id="sign-up-btn">Sign Up </button>
-                    </div>
+                <div class="panel left-panel">
+                  <div class="content">
+                    <h3>New here ?</h3>
+                    <p>
+                      Click on this button to create a new account.
+                    </p>
+                    <button class="btn transparent" id="sign-up-btn">
+                      Sign up
+                    </button>
+                  </div>
+                  <img src="https://img.freepik.com/premium-vector/happy-teachers-day-male-children-students-holding-gifts-bouquet-flowers-world-teachers_1026586-147.jpg?w=740" class="image" alt="" />
                 </div>
-                <div class="pannel right-pannel">
-                    <div class="content">
-
-                        <h3>One of us?</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                        <button class="btn transparent" id="sign-up-btn">Sign In </button>
-                    </div>
+                <div class="panel right-panel">
+                  <div class="content">
+                    <h3>One of us ?</h3>
+                    <p>
+                      Click on this button to sign in to your account
+                    </p>
+                    <button class="btn transparent" id="sign-in-btn">
+                      Sign in
+                    </button>
+                  </div>
+                  <img src="https://img.freepik.com/premium-vector/video-call-study-online-learning_1313182-3892.jpg?ga=GA1.1.1758042254.1738941354&semt=ais_hybrid" class="image" alt="" />
                 </div>
-            </div>
+              </div>
 
-             <img src="https://img.freepik.com/premium-vector/happy-teachers-day-male-children-students-holding-gifts-bouquet-flowers-world-teachers_1026586-147.jpg?w=740">
+            <!-- <img src="https://img.freepik.com/premium-vector/happy-teachers-day-male-children-students-holding-gifts-bouquet-flowers-world-teachers_1026586-147.jpg?w=740"> -->
 
 
 
-       
-        
-        <img src="https://img.freepik.com/premium-vector/video-call-study-online-learning_1313182-3892.jpg?ga=GA1.1.1758042254.1738941354&semt=ais_hybrid"> 
-    </div>
-    <script src="{% static 'student/registerScript.js' %}"></script>
+
+
+            <!-- <img src="https://img.freepik.com/premium-vector/video-call-study-online-learning_1313182-3892.jpg?ga=GA1.1.1758042254.1738941354&semt=ais_hybrid">  -->
+        </div>
+        <script src="{% static 'student/registerScript.js' %}"></script>
 </body>
 
 </html>
