--- a/college_admission/student/templates/landingPage.html
+++ b/college_admission/student/templates/landingPage.html
@@ -488,7 +488,7 @@
                 <ul class="main-menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
-                    <li><a href="course">Course</a></li>
+                    <li><a href="course">Courses</a></li>
                     <li><a href="form">Form</a></li>
                     <li><a href="dashboard">Dashboard</a></li>
                     <li><a href="#">Contact Us</a></li>
