--- a/college_admission/student/templates/course.html
+++ b/college_admission/student/templates/course.html
@@ -4,13 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'student\course.css' %}">
+    <title>Courses</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{% static 'student\course.css' %}">    
 </head>
 <body>
      <section class="courses">
         <h1 class="heading"> our famous courses </h1>
-        <div class="box-container"></div>
+        <div class="box-container">
+            <div class="box">
+            <div class="image">
+                <img src="https://img.freepik.com/free-photo/programming-background-collage_23-2149901785.jpg?t=st=1741181777~exp=1741185377~hmac=1abce2246776fbf6e83e7881a5c32746dfc8e36e42d995853c5d709e95b4cd1c&w=1380">
+                <h3>development</h3>
+            </div>
+            <div class="content">
+                <h3>choose what's best for you!</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="#" class="btn">read more </a>
+               <div class="icons">
+                <span> <i class="fas fa-book"></i> 12 modules </span>
+                <span> <i class="fas fa-clock"></i> 6 hours </span>
+               </div>
+            </div>
+
+
+            </div>
+        </div>
      </section>
     
 </body>
