--- a/college_admission/student/templates/landingPage.html
+++ b/college_admission/student/templates/landingPage.html
@@ -487,12 +487,10 @@
     
                 <ul class="main-menu">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#about">About Us</a></li>
                     <li><a href="course">Courses</a></li>
                     <li><a href="form">Form</a></li>
-                    <li><a href="dashboard">Dashboard</a></li>
-                    <li><a href="#">Contact Us</a></li>
-    
+                    <li><a href="#contact">Contact Us</a></li>
                     <li><a href="register">Register</a></li>
                 </ul>
             </div>
@@ -536,7 +534,7 @@
                     </marquee>
                 </div>
             </div>
-            <div class="width-33">
+            <div class="width-33"  id="about">
                 <div class="event-list">
                     <div class="heading-sect">
                         <h3 class="head-title">Upcoming Events</h3>
@@ -726,7 +724,7 @@
 
                            </ul>
                         </div>
-                        <div class="width-25">
+                        <div class="width-25" id="contact" >
                             <h2 class="quicklink-heading">GET IN TOUCH</h2>
                             <ul class="get-in-touch">
                           <li><i class="fa fa-envelope-o"></i> E-MAIL:<a href="#"class ="footer-e-mail"> info@dezven.com</a></li>
