--- a/college_admission/student/templates/result.html
+++ b/college_admission/student/templates/result.html
@@ -32,7 +32,7 @@
             <ul>
 
                 <li>
-                    <a href="#">
+                    <a href="studentdashboard">
                         <i class="fas fa-th-large"></i>
                         <div>Dashboard</div>
                     </a>
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="result">
                         <i class="fas fa-user-graduate"></i>
                         <div>Results</div>
                     </a>
@@ -60,7 +60,7 @@
 
                 
                     
-                        <object data="{% static "student/result/computer.pdf" %}" type="application/pdf" width="100%" height="600px">
+                        <object data="{% static "student/result/result.pdf" %}" type="application/pdf" width="100%" height="600px">
                             <p>Unable to display PDF file. <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">Download</a> instead.</p>
                           </object>
                 
