--- a/college_admission/student/templates/studentdashboard.html
+++ b/college_admission/student/templates/studentdashboard.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="{% static 
-<body>'student\studentdashboard.css' %}">
+        <link rel="stylesheet" href="{% static 'student\studentdashboard.css' %}">
+
+
+<body>
 
 </head>
 
@@ -33,7 +35,7 @@
             <ul>
 
                 <li>
-                    <a href="#">
+                    <a href="studentdashboard">
                         <i class="fas fa-th-large"></i>
                         <div>Dashboard</div>
                     </a>
@@ -45,7 +47,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="result">
                         <i class="fas fa-user-graduate"></i>
                         <div>Results</div>
                     </a>
@@ -56,236 +58,115 @@
 
             <div class="activity">
                 <div class="title">
-                    <span class="text">Recent course</span>
+                    <span class="text">Recent Applications</span>
                 </div>
+                
+                {% if applications %}
+                {% for application in applications %}
+                    <div class="activity-data">
+                        <div class="data name">
+                            <span class="data-title">Application ID:</span>
+                            <span class="data-list">{{ application.id }}</span>
+                        </div>
+                        <div class="data courses">
+                            <span class="data-title">Courses Applied:</span>
+                            <span class="data-list">{{ application.course.all|join:", " }}</span>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% else %}
                 <div class="activity-data">
                     <div class="data name">
-                        <span class=" data-title">Name</span>
-
+                        <span class="data-list">No applications found.</span>
                     </div>
-                    <div class="data email">
-                        <span class=" data-title">Email</span>
-
-                    </div>
-                    <div class="data phonenumber">
-                        <span class=" data-title">Phone Number</span>
-
-                    </div>
-                    <div class="data Gender">
-                        <span class=" data-title">Gender</span>
-
-                    </div>
-
-
                 </div>
+            {% endif %}
+        </div>
+    </div>
+</div>
+                
+               {% comment %} <div class="activity-data">
+                    <div class="data ">
+                        <span class=" data-title">Course name</span>
 
-                <div class="activity-data">
-                    <div class="data name">
-
-                        <span class="data-list">Gurnoor</span>
                     </div>
-                    <div class="data email">
+                    <div class="data ">
+                        <span class=" data-title">duration</span>
 
-                        <span class="data-list">Gurnoor@gmail.com</span>
                     </div>
-                    <div class="data phonenumber">
+                    <div class="data ">
+                        <span class=" data-title">fees</span>
 
-                        <span class="data-list">9876543210</span>
-                    </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Male</span>
-                    </div>
-
-
-                </div>
-                <div class="activity-data">
-
-                    <div class="data name">
-
-                        <span class="data-list">Japleen</span>
-                    </div>
-                    <div class="data email">
-
-                        <span class="data-list">Japleen@gmail.com</span>
-                    </div>
-                    <div class="data phonenumber">
-
-                        <span class="data-list">9870983670</span>
-                    </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Female</span>
                     </div>
 
                 </div>
-                <div class="activity-data">
 
+                <div class="activity-data">
                     <div class="data name">
 
-                        <span class="data-list">Jaideep</span>
+                        <span class="data-list">BCA</span>
                     </div>
                     <div class="data email">
 
-                        <span class="data-list">Jaideep@gmail.com</span>
+                        <span class="data-list">4 Years</span>
                     </div>
                     <div class="data phonenumber">
 
-                        <span class="data-list">9876543210</span>
+                        <span class="data-list">980000</span>
                     </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Male</span>
-                    </div>
-
+                    
                 </div>
                 <div class="activity-data">
-
                     <div class="data name">
 
-                        <span class="data-list">Rehmat</span>
+                        <span class="data-list">MScIT</span>
                     </div>
                     <div class="data email">
 
-                        <span class="data-list">Rehmat@gmail.com</span>
+                        <span class="data-list">3 Years</span>
                     </div>
                     <div class="data phonenumber">
 
-                        <span class="data-list">9812345210</span>
+                        <span class="data-list">900000</span>
                     </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Female</span>
-                    </div>
-
+                    
                 </div>
                 <div class="activity-data">
-
                     <div class="data name">
 
-                        <span class="data-list">Aviraj</span>
+                        <span class="data-list">MCA</span>
                     </div>
                     <div class="data email">
 
-                        <span class="data-list">Aviraj@gmail.com</span>
+                        <span class="data-list">2 Years</span>
                     </div>
                     <div class="data phonenumber">
 
-                        <span class="data-list">9809874321</span>
+                        <span class="data-list">800000</span>
                     </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Male</span>
-                    </div>
-
+                    
                 </div>
                 <div class="activity-data">
-
                     <div class="data name">
 
-                        <span class="data-list">Anmol</span>
+                        <span class="data-list">DCA</span>
                     </div>
                     <div class="data email">
 
-                        <span class="data-list">Anmol@gmail.com</span>
+                        <span class="data-list">2 Years</span>
                     </div>
                     <div class="data phonenumber">
 
-                        <span class="data-list">9988776210</span>
+                        <span class="data-list">600000</span>
                     </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Female</span>
-                    </div>
-
-                </div>
-                <div class="activity-data">
-
-                    <div class="data name">
-
-                        <span class="data-list">Nawab</span>
-                    </div>
-                    <div class="data email">
-
-                        <span class="data-list">Nawab@gmail.com</span>
-                    </div>
-                    <div class="data phonenumber">
-
-                        <span class="data-list">9988776655</span>
-                    </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Male</span>
-                    </div>
-
-                </div>
-                <div class="activity-data">
-
-                    <div class="data name">
-
-                        <span class="data-list">Baani</span>
-                    </div>
-                    <div class="data email">
-
-                        <span class="data-list">Baani@gmail.com</span>
-                    </div>
-                    <div class="data phonenumber">
-
-                        <span class="data-list">9881177223</span>
-                    </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Female</span>
-                    </div>
-
-                </div>
-                <div class="activity-data">
-
-                    <div class="data name">
-
-                        <span class="data-list">Arman</span>
-                    </div>
-                    <div class="data email">
-
-                        <span class="data-list">Arman@gmail.com</span>
-                    </div>
-                    <div class="data phonenumber">
-
-                        <span class="data-list">8876533210</span>
-                    </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Male</span>
-                    </div>
-
-                </div>
-                <div class="activity-data">
-
-                    <div class="data name">
-
-                        <span class="data-list">Seerat</span>
-                    </div>
-                    <div class="data email">
-
-                        <span class="data-list">Seerat@gmail.com</span>
-                    </div>
-                    <div class="data phonenumber">
-
-                        <span class="data-list">9878976910</span>
-                    </div>
-                    <div class="data Gender">
-
-                        <span class="data-list">Female</span>
-                    </div>
-
-                </div>
+                    
+                </div> {% endcomment %}
+                
 
             </div>
         </div>
-
-
-
-
+        
+        
 
 
 </body>
